MappedRandomAccessFile support for > 2GB files using LongMappedByteBuffer